[package]
name = 'lock_keys'
version = '1.1.0'
authors = ['Silvio Clecio (silvioprog) <silvioprog@gmail.com>']
license = 'MIT/Apache-2.0'
description = 'Rust library for lock keys handling.'
homepage = 'https://github.com/risoflora/lock_keys'
repository = 'https://github.com/risoflora/lock_keys'
readme = 'README.md'
keywords = ['capslock', 'numlock', 'numlockx', 'scrolllock']
categories = [
  'api-bindings',
  'hardware-support',
  'os::macos-apis',
  'os::unix-apis',
  'os::windows-apis',
]
edition = '2021'

[dependencies]
[target."cfg(windows)".dependencies.winapi]
version = '0.3'
features = ['winuser']
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = '0.10'
mach = '0.3'
io-kit-sys = '0.5'
